# Layerd

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: diffusion_unet.yaml  hf_smoke_tiny.yaml  paper_index_concat.yaml  paper_multi_head.yaml  paper_recurrent.yaml  tiny_smoke.yaml
docs/: architecture_notes.md
layereddepth_train/: __init__.py  losses.py  train.py
layereddepth_train/data/: __init__.py  dataset.py
layereddepth_train/models/: __init__.py  backbones.py  baselines.py  diffusion.py
scripts/: build_manifest_from_folders.py  download_layereddepth_hf.py  evaluate_layereddepth_tuples.py  write_toy_manifest.py
